--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li>I run a food truck locator for the Northern VA/DC area: <a href='http://foodtrucksomfg.com' target='_blank'>foodtrucksomfg</a>
         <li>I hang around <a href='https://operationcode.org/' target='_blank'>Operation Code</a>
         <li>I mentor at <a href='http://turing.io/' target='_blank'>Turing</a>
-        <li>I build and race $500 cars for use in <a href='https://www.24hoursoflemons.com/'>endurance racing</a>
+        <li>I build and drive $500 cars for use in <a href='https://www.24hoursoflemons.com/'>endurance racing</a>
       </ul>
     </div>
 
