--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </style>
   </head>
   <body>
+    <!-- Last updated: 1449514101 -->
     <h2>Sup.</h2>
     <div>
       You have stumbled upon the site for a Rick Rein.<br />
@@ -69,5 +70,6 @@
         <li><a href="articles/default_parameters_in_elixir.txt">Default parameters in elixir</a>
       </ul>
     </div>
+
   </body>
 </html>
