--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href='http://www.hmblaw.com/professionals-directory/eric-(rick)-s-rein.aspx' target='_blank'>lawyer</a><span id='no-really-please-dont-sue-me'><sup>(please don't sue me)</sup></span>
         <li>the car salesman with <a href='http://www.dealerrater.com/sales/Rick-Rein-review-233726/' target='_blank'>insanely high ratings</a>
       </ul>
-      I currently work for <a href='https://akamai.com' target='_blank'>Akamai Technologies</a> as a Software Engineer. I write mostly Ruby/Rails.<br />
+      I currently work for <a href='https://akamai.com' target='_blank'>Akamai Technologies</a> as a Software Engineer. I write mostly Ruby/Rails and Elixir.<br />
       I live in the Washinton DC area.
     </div>
 
