add stupid title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
+    <title>The One. The Only. Rick Rein</title>
     <style>
       @font-face{ font-family:'Inconsolata'; src: url(inconsolata.otf); }
       body{ font-family:'Inconsolata'; padding: 0px 20px; }
