--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <h3>Involvements</h3>
       <ul>
         <li>I run a food truck locator for the Northern VA/DC area: <a href='http://foodtrucksomfg.com' target='_blank'>foodtrucksomfg</a>
+        <li>Instead of daily standups I use <a href='http://agileup.us'>agileup.us</a> to post my daily goal to slack
         <li>I hang around <a href='https://operationcode.org/' target='_blank'>Operation Code</a>
         <li>I mentor at <a href='http://turing.io/' target='_blank'>Turing</a>
         <li>I build and drive $500 cars for use in <a href='https://www.24hoursoflemons.com/'>endurance racing</a>
