--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li>the car salesman with <a href='http://www.dealerrater.com/sales/Rick-Rein-review-233726/' target='_blank'>insanely high ratings</a>
       </ul>
       I currently work for <a href='https://akamai.com' target='_blank'>Akamai Technologies</a> as a Software Engineer. I write mostly Ruby/Rails and Elixir.<br />
-      I live in the Washinton DC area.
+      I live in the Washington DC area.
     </div>
 
     <div>
