--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </style>
   </head>
   <body>
-    <!-- Last updated: 1449514101 -->
+    <!-- Last updated: 1458353952 -->
+    <!-- Hi! If you're here please feel free to shoot me a job offer =) -->
     <h2>Sup.</h2>
     <div>
       You have stumbled upon the site for a Rick Rein.<br />
