--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- Last updated: 1458353952 -->
-    <!-- Hi! If you're here please feel free to shoot me a job offer =) -->
+    <!-- Hey! What are you doing snooping around in here? Shoot me an email if you'd like to work together. -->
     <h2>Sup.</h2>
     <div>
       You have stumbled upon the site for a Rick Rein.<br />
@@ -72,6 +72,24 @@
         <li><a href="articles/default_parameters_in_elixir.txt">Default parameters in elixir</a>
       </ul>
     </div>
+
+    <!-- Piwik -->
+    <script type="text/javascript">
+      var _paq = _paq || [];
+      _paq.push(["setDomains", ["*.rickre.in"]]);
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="//stats.foodtrucksomfg.com/";
+        _paq.push(['setTrackerUrl', u+'piwik.php']);
+        _paq.push(['setSiteId', 4]);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <noscript><p><img src="//stats.foodtrucksomfg.com/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
+    <!-- End Piwik Code -->
+
 
   </body>
 </html>
