--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <!-- Last updated: 1459863994 -->
+    <!-- Last updated: 1460524225 -->
     <!-- Hey! What are you doing snooping around in here? Shoot me an email if you'd like to work together. -->
     <h2>Sup.</h2>
     <div>
@@ -37,6 +37,7 @@
       <ul>
         <li>I run a food truck locator for the Northern VA/DC area: <a href='http://foodtrucksomfg.com' target='_blank'>foodtrucksomfg</a>
         <li>Instead of daily standups I use <a href='http://agileup.us'>agileup.us</a> to post my daily goal to slack
+        <li>I run a local <a href='http://www.meetup.com/reston_on_rails/' target='_blank'>Rails meetup</a>
         <li>I hang around <a href='https://operationcode.org/' target='_blank'>Operation Code</a>
         <li>I mentor at <a href='http://turing.io/' target='_blank'>Turing</a>
         <li>I build and drive $500 cars for use in <a href='https://www.24hoursoflemons.com/'>endurance racing</a>
@@ -89,7 +90,5 @@
     </script>
     <noscript><p><img src="//stats.foodtrucksomfg.com/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
-
-
   </body>
 </html>
