--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
     </div>
 
     <div>
+      <h3>Resume</h3>
+      dig +short resume.rickre.in TXT
+    </div>
+
+    <div>
       <h3>Ramblings</h3>
       <ul>
         <li><a href="articles/default_parameters_in_elixir.txt">Default parameters in elixir</a>
