--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div>
       <h3>Resume</h3>
-      dig +short resume.rickre.in TXT
+      <pre>  dig +short resume.rickre.in TXT | sort -n</pre>
     </div>
 
     <div>
