I guess I'm doing this now

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <tr><td class='key'>email</td><td><a href='mailto: hey@rickre.in'>hey@rickre.in</a></td></tr>
         <tr><td class='key'>email</td><td><a href='mailto: rick@rudelinux.org'>rick@rudelinux.org</td></tr>
         <tr><td class='key'>github</td><td><a href='https://github.com/rickr/' target='_blank'>rickr</a></td></tr>
+        <tr><td class='key'>twitter</td><td><a href='https://twitter.com/rickrrrrrr' target='_blank'>@rickrrrrrr</a></td></tr>
       </table>
     </div>
 
