--- a/index.html
+++ b/index.html
@@ -16,32 +16,20 @@
     </style>
   </head>
   <body>
-    <!-- Last updated: 1460524225 -->
+    <!-- Last updated: 1588774113 -->
     <!-- Hey! What are you doing snooping around in here? Shoot me an email if you'd like to work together. -->
     <h2>Sup.</h2>
     <div>
       You have stumbled upon the site for a Rick Rein.<br />
-      I am not the following Rick Reins:<br>
+      I am not the following Rick Reins:<br />
       <ul>
         <li>the one with the better <a href='https://twitter.com/coolrickrein' target='_blank'>twitter name</a>
         <li>the one that has done something with his life and is a
           <a href='http://www.hmblaw.com/professionals-directory/eric-(rick)-s-rein.aspx' target='_blank'>lawyer</a><span id='no-really-please-dont-sue-me'><sup>(please don't sue me)</sup></span>
         <li>the car salesman with <a href='http://www.dealerrater.com/sales/Rick-Rein-review-233726/' target='_blank'>insanely high ratings</a>
       </ul>
-      I currently work for <a href='https://akamai.com' target='_blank'>Akamai Technologies</a> as a Software Engineer. I write mostly Ruby/Rails and Elixir.<br />
-      I live in Denver, Colorado.
-    </div>
-
-    <div>
-      <h3>Involvements</h3>
-      <ul>
-        <li>I run a food truck locator for the Northern VA/DC area: <a href='http://foodtrucksomfg.com' target='_blank'>foodtrucksomfg</a>
-        <li>Instead of daily standups I use <a href='http://agileup.us'>agileup.us</a> to post my daily goal to slack
-        <li>I run a local <a href='http://www.meetup.com/reston_on_rails/' target='_blank'>Rails meetup</a>
-        <li>I hang around <a href='https://operationcode.org/' target='_blank'>Operation Code</a>
-        <li>I mentor at <a href='http://turing.io/' target='_blank'>Turing</a>
-        <li>I build and drive $500 cars for use in <a href='https://www.24hoursoflemons.com/'>endurance racing</a>
-      </ul>
+      I live on Long Island, NY.<br />
+      I'm currently a flight instructor, but am actively seeking employment as a software engineer.
     </div>
 
     <div>
@@ -61,10 +49,8 @@
     <div>
       <h3>Contacts</h3>
       <table id='contacts'>
-        <tr><td class='key'>email</td><td><a href='mailto: hey@rickre.in'>hey@rickre.in</a></td></tr>
         <tr><td class='key'>email</td><td><a href='mailto: rick@rudelinux.org'>rick@rudelinux.org</td></tr>
         <tr><td class='key'>github</td><td><a href='https://github.com/rickr/' target='_blank'>rickr</a></td></tr>
-        <tr><td class='key'>twitter</td><td><a href='https://twitter.com/rickrrrrrr' target='_blank'>@rickrrrrrr</a></td></tr>
       </table>
     </div>
 
@@ -88,22 +74,5 @@
         <li><a href="articles/default_parameters_in_elixir.txt">Default parameters in elixir</a>
       </ul>
     </div>
-
-    <!-- Piwik -->
-    <script type="text/javascript">
-      var _paq = _paq || [];
-      _paq.push(["setDomains", ["*.rickre.in"]]);
-      _paq.push(['trackPageView']);
-      _paq.push(['enableLinkTracking']);
-      (function() {
-        var u="//stats.foodtrucksomfg.com/";
-        _paq.push(['setTrackerUrl', u+'piwik.php']);
-        _paq.push(['setSiteId', 4]);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-      })();
-    </script>
-    <noscript><p><img src="//stats.foodtrucksomfg.com/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
-    <!-- End Piwik Code -->
   </body>
 </html>
