--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <a href='http://www.hmblaw.com/professionals-directory/eric-(rick)-s-rein.aspx' target='_blank'>lawyer</a><span id='no-really-please-dont-sue-me'><sup>(please don't sue me)</sup></span>
         <li>the car salesman with <a href='http://www.dealerrater.com/sales/Rick-Rein-review-233726/' target='_blank'>insanely high ratings</a>
       </ul>
-      I live on Long Island, NY.<br />
-      I'm currently a flight instructor, but am actively seeking employment as a software engineer.
+      I live in Astoria, NY.<br />
+      I'm currently an airline pilot, software engineer, and cofounder.
     </div>
 
     <div>
